@@ -181,6 +181,7 @@ if ($_SERVER['SCRIPT_NAME'] != '/client/sql_execute_query.php') {
 	check_query(array('sql_query'));
 }
 
+// Use HTMLPurifier on every request, if OVERRIDE_PURIFIER is not defined
 if ($_REQUEST && !defined('OVERRIDE_PURIFIER')) {
 	$config = HTMLPurifier_Config::createDefault();
 	$config->set('HTML', 'TidyLevel', 'none'); // XSS cleaning
